force-app/main/default/objects/WorkOrderLineItem/fields/Payment_Launched__c.field-meta.xml
<CustomField>
    <fullName>Payment_Launched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Launched</label>
    <type>Checkbox</type>
</CustomField>