force-app/main/default/objects/WorkOrderLineItem/fields/Shopify_Client_Message__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Client_Message__c</fullName>
    <formula>IF( 
 LOWER(Shopify_Payment_Pending__c) = &apos;true&apos;,
$Label.customer_pays,
IF(LOWER(Shopify_Payment_Pending__c) = &apos;false&apos;,
$Label.payment_Processed,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shopify Client Message</label>
    <type>Text</type>
</CustomField>