force-app/main/default/objects/WorkOrderLineItem/fields/Shopify_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Payment_Pending__c</fullName>
    <label>Shopify Payment Pending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>