force-app/main/default/objects/WorkOrderLineItem/fields/Shopify_Payment_url__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Payment_url__c</fullName>
    <label>Shopify Payment url</label>
    <type>Url</type>
</CustomField>