force-app/main/default/objects/WorkOrderLineItem/fields/TECH_Shopify_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Shopify_Contact_Id__c</fullName>
    <label>TECH Shopify Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>